benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignums_Zeros_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignums_Zeros.rs
Time: 2025-09-15 19:13:25

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignums_Zeros_impl.rs:41:47
   |
41 |             forall |j: nat| 0 <= j < i ==> v@[j] == '0',
   |                                            ---^-
   |                                            |  |
   |                                            |  expected `int`, found `nat`
   |                                            arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:60:22

error[E0605]: non-primitive cast: `vstd::prelude::int` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignums_Zeros_impl.rs:36:19
   |
36 |     let n_usize = n as usize;
   |                   ^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignums_Zeros_impl.rs:41:47
   |
41 |             forall |j: nat| 0 <= j < i ==> v@[j] == '0',
   |                                            ---^-
   |                                            |  |
   |                                            |  expected `int`, found `nat`
   |                                            arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:60:22

error[E0605]: non-primitive cast: `vstd::prelude::int` as `usize`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignums_Zeros_impl.rs:36:19
   |
36 |     let n_usize = n as usize;
   |                   ^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0605.
For more information about an error, try `rustc --explain E0308`.
